--- a/Tooltips/Windows10.css
+++ b/Tooltips/Windows10.css
@@ -5,28 +5,9 @@
     border-radius: 0px;
     box-shadow: 4px 4px 8px -2px rgba(0,0,0,0.3);
     padding: 5px;
-    -webkit-animation: tooltip-anim 200ms ease-in-out;
-    animation: tooltip-anim 200ms ease-in-out;
+    transition:opacity 0.2s ease;
 }
 
 .tooltip.tooltip-right.tooltip-normal:after, .tooltip.tooltip-bottom:after, .tooltip.tooltip-top:after {
     opacity: 0;
-}
-
-@-webkit-keyframes tooltip-anim {
-    from {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@keyframes tooltip-anim {
-    from {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
 }
