W10 ContextMenu - Region Change Support

--- a/ContextMenu/Windows10.css
+++ b/ContextMenu/Windows10.css
@@ -1,4 +1,6 @@
-.context-menu.theme-dark, .context-menu.theme-dark .context-menu {
+.context-menu.theme-dark,
+.context-menu.theme-dark .context-menu,
+.theme-dark .context-menu {
     border-radius: 0px ;
     background: #000 !important;
     border: 1px solid #393939;
@@ -18,14 +20,26 @@
     transition: all 0.2s ease;
 }
 
-.context-menu.theme-dark .item:hover {
+.context-menu.theme-dark .item:hover,
+.theme-dark .context-menu .item:hover {
     border-radius: 0px;
     background: #262626;
     transition: all 0.2s ease;
 }
 
-.context-menu.theme-dark .item {
+.context-menu.theme-dark .item,
+.theme-dark .context-menu .item .region-select-name,
+.theme-dark .context-menu .item  {
     color: #fff !important;
+    transition: all 0.2s ease;
+}
+
+.theme-dark .context-menu .item .check {
+    background: url(https://storage.googleapis.com/material-icons/external-assets/v4/icons/svg/ic_done_white_24px.svg);
+    background-size: cover;
+    width: 20px;
+    height: 16px;
+    transform: translateY(-3px);
 }
 
 
@@ -51,7 +65,9 @@
     }
 }
 
-.context-menu.theme-light .item {
+.context-menu.theme-light .item,
+.theme-light .context-menu .item .region-select-name,
+.theme-light .context-menu .item {
     color: #000 !important;
     transition: all 0.2s ease;
 }
@@ -62,13 +78,24 @@
     transition: all 0.2s ease;
 }
 
-.context-menu.theme-light .item:hover {
+.theme-light .context-menu .item .check {
+    background: url(https://storage.googleapis.com/material-icons/external-assets/v4/icons/svg/ic_done_black_24px.svg);
+    background-size: cover;
+    width: 20px;
+    height: 16px;
+    transform: translateY(-3px);
+}
+
+.context-menu.theme-light .item:hover,
+.theme-light .context-menu .item:hover {
     border-radius: 0px;
     background: #e8e8e8;
     transition: all 0.2s ease;
 }
 
-.context-menu.theme-light, .context-menu.theme-light .context-menu {
+.context-menu.theme-light,
+.context-menu.theme-light .context-menu,
+.theme-light .context-menu {
     border-radius: 0px ;
     background: #fff !important;
     border: 1px solid #a4a4a4;
