--- a/ContextMenu/Windows10.css
+++ b/ContextMenu/Windows10.css
@@ -42,6 +42,11 @@
     transform: translateY(-3px);
 }
 
+.context-menu.invertX, .context-menu.invertX .context-menu {
+    -webkit-animation: sub-contextmenu-invertx-anim 200ms ease-in-out;
+    animation: sub-contextmenu-invertx-anim 200ms ease-in-out;
+}
+
 
 @-webkit-keyframes sub-contextmenu-anim {
     from {
@@ -57,6 +62,29 @@
 @keyframes sub-contextmenu-anim {
     from {
         transform: translateX(20px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+
+
+@-webkit-keyframes sub-contextmenu-invertx-anim {
+    from {
+        transform: translateX(-20px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+
+@keyframes sub-contextmenu-invertx-anim {
+    from {
+        transform: translateX(-20px);
         opacity: 0;
     }
     100% {
