--- a/TitleBlocks/images.css
+++ b/TitleBlocks/images.css
@@ -33,3 +33,38 @@
     background-image: url(https://newrelic.com/assets/languages/platforms/java_jboss-21a166a8bdd6f249c59d8be721ba4faa.svg);
     background-size: 20%;
 }
+
+.markup .hljs[class~="prolog" i]::before {
+    background-image: url(https://avatars0.githubusercontent.com/u/6884283?v=4&s=200);
+}
+
+.markup .hljs[class~="cpp" i]::before {
+    background-image: url(https://people.rit.edu/acc1414/230/portfolio/images/cplusplus.png);
+}
+
+.markup .hljs[class~="d" i]::before {
+    background-image: url(https://dlang.org/images/dlogo_opengraph.png);
+}
+
+.markup .hljs[class~="cs" i]::before,
+.markup .hljs[class~="csharp" i]::before {
+    background-image: url(https://raw.githubusercontent.com/sschmid/Entitas-CSharp/master/Readme/Images/csharp.png);
+}
+
+.markup .hljs[class~="go" i]::before {
+    background-image: url(https://www.unixstickers.com/image/data/stickers/golang/golang.sh.png);
+    background-position: 90% 20%;
+}
+
+.markup .hljs[class~="md" i]::before,
+.markup .hljs[class~="markdown" i]::before {
+    background-image: url(https://wpshout.com/media/2017/04/1200px-Markdown-mark.svg1_.png);
+}
+
+.markup .hljs[class~="lua" i]::before {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Lua-logo-nolabel.svg/1200px-Lua-logo-nolabel.svg.png);
+}
+
+.markup .hljs[class~="less" i]::before {
+    background-image: url(https://i-need.discord.cards/97c8db.png);
+}
