rawgit to githack

--- a/TitleBlocks/theme.css
+++ b/TitleBlocks/theme.css
@@ -1,6 +1,6 @@
-@import url("https://rawgit.com/Snazzah/BeautifulDiscordSnippets/master/TitleBlocks/lang.css");
+@import url("https://raw.githack.com/Snazzah/BeautifulDiscordSnippets/master/TitleBlocks/lang.css");
 
-/* @import url("https://rawgit.com/Snazzah/BeautifulDiscordSnippets/master/TitleBlocks/images.css");
+/* @import url("https://raw.githack.com/Snazzah/BeautifulDiscordSnippets/master/TitleBlocks/images.css");
  * - Optional: Adds images to certain languages
  */
 
